crates/main/assets/index.css
/* ... */
/* ============================================================
 * Page: list-page
 * ========================================================== */
.list-page {

    h1 {
        display: none;
    }

    h2 {
        font-size: 1rem;
        font-weight: normal;
        margin: 0;
    }

    p {
        margin: 0;
    }

    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    a {
        color: var(--link-text-color);
    }

    /* nav links (shared style) */
    .new-bookmark-link a,
    .pagination a {
        display: block;
        overflow: hidden;
        padding: 8px;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover {
            background-color: var(--hover-background-color);
        }
    }

    .no-bookmarks {
        display: block;
        padding: 8px;
    }

    .bookmark-group-name {
        display: block;
        padding: 8px;
    }

    .bookmark-item {
        display: flex;
        flex-flow: row nowrap;
        gap: 4px;
    }

    .bookmark-item a {
        display: block;
        flex: 1;
        overflow: hidden;
        padding: 8px;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover {
            background-color: var(--hover-background-color);
        }
    }

    .bookmark-item .detail {
        background-color: var(--background-color);
        border: none;
        color: var(--text-color);
        cursor: pointer;
        display: block;
        flex: none;
        height: 40px;
        text-decoration: none;
        width: 40px;

        &:hover {
            background-color: var(--hover-background-color);
        }
    }

    .bookmark-item .popover {
        border: 1px solid var(--text-color);
        box-shadow: 4px 4px var(--shadow-color);
        padding: 0;
        position-anchor: auto;
        position-area: bottom span-right;
        position: absolute;

        & ul {
            list-style-type: none;
            margin: 0;
            padding: 0;
        }

        & li {
            cursor: pointer;
        }

        & li a {
            background-color: var(--background-color);
            color: var(--text-color);
            text-decoration: none;
        }

        & li a:hover {
            background-color: var(--hover-background-color);
        }
    }
}

/* ============================================================
 * Page: show-page
 * ========================================================== */
.show-page {

    h1 {
        display: none;
    }

    h2 {
        font-size: 1rem;
        font-weight: normal;
        margin: 0;
    }

    p {
        margin: 0;
    }

    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    a {
        color: var(--link-text-color);
    }

    /* nav links (shared style) */
    .back-link a {
        display: block;
        overflow: hidden;
        padding: 8px;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover {
            background-color: var(--hover-background-color);
        }
    }

    /* form container (shared style) */
    .edit-bookmark-form {
        display: flex;
        flex-flow: column nowrap;
        gap: 24px;
        padding: 8px;
    }

    .form-fields {
        display: flex;
        flex-flow: column nowrap;
        gap: 8px;
    }

    .form-field {
        display: flex;
        flex-flow: column nowrap;
        gap: 4px;
    }

    .form-field input {
        background-color: var(--background-color);
        border: 1px solid var(--border-color);
        box-sizing: border-box;
        color: var(--text-color);
        font-size: 1rem;
        outline: none;
        padding: 4px;
        width: 100%;
    }

    .form-submit button {
        background-color: var(--background-color);
        border: 1px solid var(--border-color);
        box-shadow: 2px 2px var(--shadow-color);
        color: var(--text-color);
        cursor: pointer;
        font-size: 1rem;
        padding: 4px 16px;

        &:focus:active,
        &:hover:active,
        &:active {
            box-shadow: none;
            transform: none;
        }

        &:focus,
        &:hover {
            box-shadow: 3px 3px var(--shadow-color);
            outline: none;
            transform: translate(-1px, -1px);
        }
    }
}
/* ... */

